--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <style>
     body{
-      background-image: url('assets/images/flowers.jpeg');
+      background-image: url('assets/images/calcbg.jpg');
   background-repeat:no-repeat ;
   background-attachment:fixed;
   background-size:100% 100%;
